syntax = "proto3";

option go_package = "pkg/uinput";

package uinput;

service HostService {
  rpc UinputTriggerOpen (UinputTriggerMessage) returns (UinputTriggerResponse);
  rpc UinputTriggerClose (UinputTriggerMessage) returns (UinputTriggerResponse);
}

message UinputTriggerMessage {
  string podName = 1;
  enum PluginMode {
    POD = 0;
    CONTAINER = 1;
  }
  PluginMode pluginMode = 2;
}

message UinputTriggerResponse {}